infra/don-forget-redis.yml

apiVersion: apps/v1

kind: Deployment

metadata:
  name: redis-deployment
  namespace: lgcns
    

spec: 
  replicas: 1
  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
 
      containers:
      - name: redis-container
        image: redis
        ports:
          - containerPort: 6379




---


apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: lgcns

spec: 
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379       
  selector:
    app: redis
