infra/don-forget-ingress.yml

# AWS Network Load Balance가 필요 -> ingress controller(pod) -> ingress -> service -> pod
# url과 연동하는 작업이기 때문에 다른 것과 다름

#버전
apiVersion: networking.k8s.io/v1

#자원의 종류(pod, sevice, ReplicaSet, Deployment(이게 일반적, replicaset도 포함됨 : 어떻게 운영을 할 것인지 정책들을 reploicaset에서 함))
kind: Ingress

metadata:
  name: don-forget-ingress
  namespace: lgcns

  annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1

spec: 
  ingressClassName: nginx
  rules:
  # 레코드로 등록한 도메인 이름
  - host: # 도메인 정해지면 넣어주세요
    http: 
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: apigateway-service
            port:
              number: 80
